--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -44,7 +44,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: gelyamolodets/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -59,7 +59,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           stack_file_name: docker-compose.yaml
           script: |
-            sudo docker pull gelyamolodets/yamdb
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
