--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -64,7 +64,6 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb
             sudo docker-compose stop
             sudo docker-compose rm web
-            docker-compose exec web python manage.py collectstatic --no-input
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -73,6 +72,8 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
+            docker-compose exec web python manage.py migrate --noinput
+            docker-compose exec -t web python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
