--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,9 @@ services:
       - "80:80"
     environment:
       - NGINX_HOST=gelyamolodets.hopto.org
+      - NGINX_PORT=80
     volumes:
+      - ./templates:/etc/nginx/templates
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
       - media_value:/var/html/media/
