--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,9 +30,10 @@ services:
       - NGINX_HOST=gelyamolodets.hopto.org
       - NGINX_PORT=80
     volumes:
-      - ./templates:/etc/nginx/templates
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/templates/default.conf.template:/etc/nginx/templates
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
       - web
+    env_file:
+      - ./.env
