--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - NGINX_HOST=gelyamolodets.hopto.org
       - NGINX_PORT=80
     volumes:
-      - ./nginx/templates/default.conf.template:/etc/nginx/templates
+      - ./nginx/templates:/etc/nginx/templates
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
