--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,6 +1,21 @@
 server {
+    listen 80;
 
     server_name ${NGINX_HOST};
+
+    server_tokens off;
+
+    location /static/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location / {
+        proxy_pass http://web:8000;
+    }
 
 
 }
