--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -74,7 +74,7 @@ jobs:
             echo NGINX_HOST=${{ secrets.NGINX_HOST }} >> .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             sudo docker-compose up -d
-            sudo docker cp /home/praktikum/static/redoc.yaml kaker_web_1:/code/static
+            sudo docker cp /home/praktikum/static/redoc.yaml praktikum_web_1:/code/static
             sudo docker-compose run web python manage.py migrate --noinput
             sudo docker-compose run web python manage.py collectstatic --no-input
   send_message:
