--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: "3.3"
 
 volumes:
-  postgres_data:
+  postgres_data3:
   static_value:
   media_value:
 
 services:
   db:
-    image: postgres:12.4
+    image: postgres:13.3
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data3:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - .env
   web:
     image: gelyamolodets/yamdb
     restart: always
@@ -21,7 +21,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - .env
   nginx:
     image: nginx:1.19.3
     ports:
@@ -33,4 +33,4 @@ services:
     depends_on:
       - web
     env_file:
-      - ./.env
+      - .env
